[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/habitIcons/no-smoking.png" type="Texture" id=1]
[ext_resource path="res://assets/menus/Habits_Bought.png" type="Texture" id=2]
[ext_resource path="res://HabitsBought.gd" type="Script" id=3]
[ext_resource path="res://assets/habitIcons/barbell.png" type="Texture" id=4]
[ext_resource path="res://assets/habitIcons/suncream.png" type="Texture" id=5]
[ext_resource path="res://assets/habitIcons/no-alcohol.png" type="Texture" id=6]
[ext_resource path="res://assets/habitIcons/vaccine.png" type="Texture" id=7]
[ext_resource path="res://assets/habitIcons/urologist-visit.png" type="Texture" id=8]
[ext_resource path="res://assets/habitIcons/mammogram.png" type="Texture" id=9]
[ext_resource path="res://assets/habitIcons/salad.png" type="Texture" id=10]
[ext_resource path="res://assets/habitIcons/no-processed-food.png" type="Texture" id=11]

[node name="HabitsBoughtNode" type="Node2D"]
script = ExtResource( 3 )

[node name="Panel" type="Sprite" parent="."]
position = Vector2( 118, 327.125 )
rotation = 1.5708
scale = Vector2( 0.692, 1 )
texture = ExtResource( 2 )

[node name="NoSmoking" type="Sprite" parent="Panel"]
visible = false
position = Vector2( -124.458, 1.00031 )
rotation = -1.58591
scale = Vector2( 0.300959, 0.434874 )
texture = ExtResource( 1 )

[node name="Sedentary" type="Sprite" parent="Panel"]
visible = false
position = Vector2( -124.458, -34.9997 )
rotation = -1.58591
scale = Vector2( 0.300959, 0.434874 )
texture = ExtResource( 4 )

[node name="Suncream" type="Sprite" parent="Panel"]
visible = false
position = Vector2( -63.7645, 1.00016 )
rotation = -1.58591
scale = Vector2( 0.300959, 0.434874 )
texture = ExtResource( 5 )

[node name="Vaccine" type="Sprite" parent="Panel"]
visible = false
position = Vector2( -62.3195, -34.9998 )
rotation = -1.58591
scale = Vector2( 0.300959, 0.434874 )
texture = ExtResource( 7 )

[node name="Urologist" type="Sprite" parent="Panel"]
visible = false
position = Vector2( -3.0708, 1.00001 )
rotation = -1.58591
scale = Vector2( 0.300959, 0.434874 )
texture = ExtResource( 8 )

[node name="HealthyEating" type="Sprite" parent="Panel"]
visible = false
position = Vector2( -3.07098, -35 )
rotation = -1.58591
scale = Vector2( 0.300959, 0.434874 )
texture = ExtResource( 10 )

[node name="NoAlcohol" type="Sprite" parent="Panel"]
visible = false
position = Vector2( 57.6228, 0.999855 )
rotation = -1.58591
scale = Vector2( 0.300959, 0.434874 )
texture = ExtResource( 6 )

[node name="NoProcessedFood" type="Sprite" parent="Panel"]
visible = false
position = Vector2( 57.6226, -35.0001 )
rotation = -1.58591
scale = Vector2( 0.300959, 0.434874 )
texture = ExtResource( 11 )

[node name="Mammogram" type="Sprite" parent="Panel"]
visible = false
position = Vector2( 118.316, 0.999702 )
rotation = -1.58591
scale = Vector2( 0.300959, 0.434874 )
texture = ExtResource( 9 )

[node name="Icon" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( 32, 192 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 1 )
